# sber-agents

./: README.md  whisper-service.py
.cursor/rules/: conventions.mdc  workflow.mdc
02-llm-api/: .env.example
02-llm-api/reports/: report.md
02-llm-api/src/: bot.py
03-aidd/: .env.example  Makefile  README.md  pyproject.toml
03-aidd/docs/: conventions.md  idea.md  tasklist.md  vision.md
03-aidd/src/: bot.py
04-multimodal/: .env.example  Makefile  README.md  pyproject.toml  report.md
04-multimodal/docs/: idea.md  speech-to-text-research.md  tasklist.md  vision.md  whisper-local-setup.md
04-multimodal/src/: bot.py
05-rag-langchain/: report.md
05-rag-langchain/src/: indexer_with_json.py
06-monitoring-qa/: env.example  pyproject.toml  report.md
06-monitoring-qa/docs/references/: naive-rag.ipynb
06-monitoring-qa/src/: config.py  dataset_synthesizer.py  evaluation.py  indexer.py  rag.py
07-advanced-rag/: CHANGELOG.md  Makefile  REPORT.md  env.example  pyproject.toml
07-advanced-rag/docs/: ragas-local-llm-research.md
07-advanced-rag/docs/references/: naive-rag.ipynb
07-advanced-rag/src/: bot.py  config.py  dataset_synthesizer.py  evaluation.py  indexer.py  rag.py
08-agents-langgraph/: env.example  pyproject.toml  report.md
08-agents-langgraph/docs/references/: naive-rag.ipynb
08-agents-langgraph/src/: config.py  evaluation.py  tools.py
09-mcp/: report.md
09-mcp/docs/references/: naive-rag.ipynb
09-mcp/mcp/mcp-bank-agent/: server.py
09-mcp/prompts/: agent_system.txt
09-mcp/src/: agent.py
docs/: idea.md  tasklist.md  workflow.md
