[project]
name = "aidd-bot"
version = "0.1.0"
description = "Telegram bot with LLM financial advisor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []





